--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5d6QXxN6kBmSMLANEFuTNbH4_XEDDoQY"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LcWeTAcAAAAAIIjGQnh7zLC0IRl22MNeao1WJtI"></script>
 </head>
 <body style="margin: 0 0;">
   <app-root></app-root>
